--- a/02-Multi-page-calculater/style.css
+++ b/02-Multi-page-calculater/style.css
@@ -2,11 +2,549 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 body,
 html {
     height: 100%;
     width: 100%;
+}
+
+.main {
+    height: 100%;
+    width: 100%;
+    padding: 3.5vh 15vw;
+    background-color: #EEF5FF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.steps {
+    width: 30%;
+    background-color: #204a57;
+    height: 80%;
+    padding: 1.5vh 1vw;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    background-color: #FFFFFF;
+}
+
+.texts {
+    span {
+        color: #ffffffb1;
+    }
+
+    h3 {
+        color: #fff;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600;
+    }
+}
+
+.content {
+    height: 100%;
+    width: 100%;
+    background-image: url(./assets/images/bg-sidebar-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vh;
+    padding: 2.5vh 1.5vw;
+    border-radius: 10px;
+}
+
+.step1 {
+    display: flex;
+    gap: 1rem;
+
+    .step1_box {
+        height: 35px;
+        width: 35px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: #000;
+        border: 0.5px solid #fff;
+    }
+}
+
+.changecolorbox {
+    background-color: #BEE2FC;
+}
+
+.step2 {
+    display: flex;
+    gap: 1rem;
+
+    .step2_box {
+        height: 35px;
+        width: 35px;
+        background-color: transparent;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: #fff;
+        border: 0.5px solid #fff;
+    }
+
+    .step2_box.changecolorbox {
+        background-color: #BEE2FC;
+        color: #000;
+    }
+}
+
+.step3 {
+    display: flex;
+    gap: 1rem;
+
+    .step3_box {
+        height: 35px;
+        width: 35px;
+        background-color: transparent;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: #fff;
+        border: 0.5px solid #fff;
+    }
+}
+
+.step4 {
+    display: flex;
+    gap: 1rem;
+
+    .step4_box {
+        height: 35px;
+        width: 35px;
+        background-color: transparent;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: aliceblue;
+        border: 0.5px solid #fff;
+    }
+}
+
+.pages {
+    width: 70%;
+    height: 80%;
+    background-color: #FFF;
+    padding: 6vh 7vw;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.pages .step1_page {
+    height: 100%;
+    width: 100%;
+
+    h1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    p {
+        font-size: 1.2rem;
+        opacity: 0.7;
+        margin-top: 1vh;
+    }
+
+    form {
+        height: 80%;
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin-top: 3.5vh;
+
+        label {
+            font-size: 1.2rem;
+            text-transform: capitalize;
+            padding-bottom: 1vh;
+        }
+
+        input {
+            padding: 1.5vh;
+            border-radius: 7px;
+            border: 1.2px solid black;
+            margin-bottom: 2vh;
+        }
+
+        input:focus {
+            outline: none;
+            border: 1.2px solid #9592C8;
+        }
+
+        #submit {
+            margin-top: 3vh;
+            flex-shrink: 0;
+            width: 25%;
+            position: absolute;
+            right: 0px;
+            bottom: 0px;
+            font-size: 1rem;
+            background-color: #174A8B;
+            font-weight: 700;
+            color: #fff;
+            border: none;
+        }
+
+        #submit:focus {
+            border: none;
+        }
+    }
+}
+
+.email-error,
+.nameerror {
+    display: none;
+    font-size: 0.7rem;
+    color: red;
+}
+
+.step2_page {
+    h1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        margin-bottom: 1.5vh;
+    }
+
+    p {
+        font-size: 1.2rem;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        opacity: 0.7;
+    }
+}
+
+.step2_page {
+    display: none;
+}
+
+.planslist {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4.5vh;
+}
+
+.plan1 {
+    height: 175px;
+    width: 160px;
+    padding-top: 2vh;
+    padding-left: 1.4vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid #E6E5EB;
+    border-radius: 7px;
+    box-shadow: 1px 0px 4px 1px #02295b65;
+    transition: all 0.5s ease-in;
+
+    .texts {
+        padding-bottom: 1.2vh;
+        font-size: 1.2rem;
+        font-weight: 600;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+        p {
+            opacity: 0.6;
+        }
+    }
+}
+
+.plan1:hover {
+    border: 1px solid #02295B;
+    transform: scale(1.01);
+    box-shadow: 1px 0px 17px 1px #02295B;
+}
+
+.plan1.selected {
+    border: 1px solid #02295B;
+    transform: scale(1.01);
+    box-shadow: 1px 0px 12px 1px #02295bfc;
+}
+
+.switch_plain_month_year {
+    margin-top: 3vh;
+    background-color: #F8F9FE;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    padding: 1.5vh 0.5vw;
+    border-radius: 10px;
+
+    .month {
+        font-weight: 700;
+        color: #030e1d80;
+    }
+
+    .month.yeamon {
+        color: #010305;
+    }
+
+    .year {
+        font-weight: 700;
+        color: #030e1d8b;
+    }
+
+    .yeamon {
+        color: #02060b;
+    }
+
+    .round {
+        height: 22px;
+        width: 45px;
+        background-color: #02295B;
+        border-radius: 20px;
+        position: relative;
+
+        .move {
+            position: absolute;
+            height: 75%;
+            width: 40%;
+            background-color: #FFF;
+            border-radius: 50%;
+            margin-left: 3px;
+            top: 12.5%;
+        }
+
+        .move.left {
+            position: absolute;
+            top: 12.5%;
+            right: 3px;
+        }
+    }
+}
+
+#freemon {
+    display: block;
+    padding: 4px 0px;
+    color: #042859;
+    font-size: 1.1rem;
+    display: none;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10vh;
+
+    .back {
+        font-size: 1.3rem;
+        font-weight: 700;
+        color: #04275977;
+        cursor: pointer;
+    }
+
+    .back:hover {
+        color: #042859;
+    }
+
+    button {
+        font-size: 1.2rem;
+        font-weight: 600;
+        padding: 10px 18px;
+        border-radius: 8px;
+        border: none;
+        background-color: #042859;
+        color: #fff;
+        cursor: pointer;
+    }
+}
+
+
+.step3_page3 {
+    h1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    p {
+        font-size: 1.2rem;
+        opacity: 0.7;
+        margin-top: 1vh;
+        
+    }
+
+    .services {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 2.5vh;
+        margin-top: 3vh;
+
+        .store {
+            border: 2px solid #857CED;
+            border-radius: 8px;
+            padding: 13px 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+}
+.step3_page3{
+    display: none;
+}
+
+.store_text {
+    display: flex;
+    align-items: center;
+
+    .box_cheak {
+        height: 20px;
+        width: 20px;
+        margin-right: 2vw;
+        border-radius: 4px;
+        padding: 2px;
+        border: 0.5px solid rgba(0, 0, 0, 0.488);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .stext {
+        h3 {
+            color: #354565;
+        }
+
+        h3,
+        p {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        p {
+            font-size: 0.9rem;
+            padding-top: 0.2vh;
+            margin-top: 0px;
+        }
+    }
+
+    .box_cheak.active {
+        background-color: #463EFF;
+    }
+}
+
+.storeprice {
+    color: #857CED;
+    font-family: 'Segoe UI';
+    font-weight: 600;
+}
+
+.store.selected {
+    background-color: #F8F9FE;
+}
+
+.imgnone {
+    display: none;   /* hidden by default */
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
+.box_cheak.active img {
+    display: block;  /* show image when parent has .active */
+}
+
+
+/*page 4*/
+.step4_page{
+     h1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    p {
+        font-size: 1.2rem;
+        opacity: 0.7;
+        margin-top: 1vh;
+        
+    }
+    .totalprice{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 3.5vh 2.5vw;
+        p{
+            opacity: 0.5;
+        }
+        span{
+            font-size: 1.4rem;
+            font-weight: 900;
+            color: #453DF4;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+    }
+    .buttons{
+        margin-top: 6vh;
+    }
+}
+.step4_page{
+    display: none;
+}
+.calculater{
+    margin-top: 2.5vh;
+    padding: 3vh 2.5vw;
+    font-size: 1.1rem;
+    background-color: #F8F9FE;
+    width: 100%;
+    border-radius: 7px;
+    .selectyourplan{
+        padding-bottom: 2.5vh;
+        border-bottom: 0.5px solid gray;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        h3{
+            color: #051937;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-weight: 800;
+        }
+    }
+}
+.yourstores{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 1vh;
+    .first{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 1vh;
+        p{
+            opacity: 0.5;
+        }
+        span{
+            color: #354059;
+        }
+    }
+}
+
+/* Highlighted step circle */
+.changecolorbox {
+    background-color: #BEE2FC !important;  /* aapka highlight color */
+    color: #000 !important;                /* text color */
+    border: none;                          /* optional */
 }
