--- a/03-GradientGallery/style.css
+++ b/03-GradientGallery/style.css
@@ -168,11 +168,12 @@ form button:hover {
     
     form input {
         font-size: 1rem;
-        padding: 0 20px;
+        padding: 0 10px;
     }
     
     form button {
-        padding: 0 25px;
+        width: 25%;
+        padding: 0 5px;
         font-size: 1rem;
     }
     
