--- a/05-API-MEME/style.css
+++ b/05-API-MEME/style.css
@@ -32,6 +32,7 @@ header {
     text-transform: capitalize;
     background: linear-gradient(to right, rgb(55, 65, 81), rgb(68, 72, 80), rgb(0, 0, 0));
     color: #fff;
+    cursor: pointer;
 }
 
 .meme-container {
